# FaceScanner

./: CMakeLists.txt  README.md
bridge/: vision_bridge.cpp
include/: app.h  config.h  faceid.h  storage.h  util.h  vision_bridge.h
src/: app.c  config.c  faceid.c  main.c  storage.c  utils.c
